@@ -1,46 +1,66 @@
 package com.example.dormlaundrysystem.booking;
 
+import com.example.dormlaundrysystem.auth.UserRepository;
+import com.example.dormlaundrysystem.auth.model.User;
 import com.example.dormlaundrysystem.booking.model.Reservation;
 import com.example.dormlaundrysystem.booking.model.TimeSlot;
 import com.example.dormlaundrysystem.booking.model.dto.ReservationDto;
-import com.example.dormlaundrysystem.booking.model.dto.TimeSlotDto;
 import com.example.dormlaundrysystem.booking.model.mapper.ReservationMapper;
-import com.example.dormlaundrysystem.booking.model.mapper.TimeSlotMapper;
 import com.example.dormlaundrysystem.washer.WasherRepository;
 import com.example.dormlaundrysystem.washer.model.Washer;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class ReservationService {
     private final ReservationRepository reservationRepository;
     private final TimeSlotRepository timeSlotRepository;
     private final WasherRepository washerRepository;
+    private final UserRepository userRepository;
 
-    public ReservationService(ReservationRepository reservationRepository, TimeSlotRepository timeSlotRepository, WasherRepository washerRepository) {
+    public ReservationService(ReservationRepository reservationRepository, TimeSlotRepository timeSlotRepository, WasherRepository washerRepository, UserRepository userRepository) {
         this.reservationRepository = reservationRepository;
         this.timeSlotRepository = timeSlotRepository;
         this.washerRepository = washerRepository;
+        this.userRepository = userRepository;
     }
 
-    public void createReservation() {
+    @Transactional
+    public void createReservation(String username, Long washerId, Long slotId) {
+        User user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new IllegalArgumentException("User not found"));
 
+        Washer washer = washerRepository.findById(washerId)
+                .orElseThrow(() -> new IllegalArgumentException("Washer not found"));
+
+        TimeSlot slot = timeSlotRepository.findByIdAndWasher(slotId, washer)
+                .orElseThrow(() -> new IllegalArgumentException("Slot not found for washer"));
+
+        Reservation reservation = new Reservation();
+        reservation.setUser(user);
+        reservation.setWasher(washer);
+        reservation.setTimeSlot(slot);
+        reservationRepository.save(reservation);
+
+        slot.setAvailable(false);
+        timeSlotRepository.save(slot);
     }
 
-    public List<TimeSlotDto> getAvailableTimeSlotsForWasher(Long washerId) {
+    public Map<LocalDate, List<TimeSlot>> getAvailableTimeSlotsForWasher(Long washerId, LocalDate startDate, LocalDate endDate) {
         Washer washer = washerRepository.findById(washerId).orElseThrow();
-        List<TimeSlot> timeSlots = timeSlotRepository.findAll();
-        List<Reservation> reservations = reservationRepository.findByWasherId(washerId);
+        List<TimeSlot> slotsInRange = timeSlotRepository.findByDayDateBetweenAndWasher(startDate, endDate, washer);
 
-        List<Long> bookedTimeIds = reservations.stream()
-                .map(reservation -> reservation.getTimeSlot().getId())
-                .toList();
-        List<TimeSlot> availableTimeSlots = timeSlots.stream()
-                .filter(timeSlot -> !bookedTimeIds.contains(timeSlot.getId()))
-                .toList();
-
-        return availableTimeSlots.stream().map(TimeSlotMapper::toDto).toList();
+        return slotsInRange.stream()
+                .filter(TimeSlot::isAvailable)
+                .collect(Collectors.groupingBy(
+                        timeSlot -> timeSlot.getDay().getDate(),
+                        Collectors.toList()
+                ));
     }
 
     public List<ReservationDto> searchReservations(String firstName, String surname) {
